--- a/bbs/index.html
+++ b/bbs/index.html
@@ -53,8 +53,8 @@
         <section>
             <h2>ページ概要</h2>
             <p>掲示板です。</p>
-            <p>ここでは、様々なトピックについての議論や情報交換が行われています。</p>
-            <p>新しいスレッドを作成したり、既存のスレッドに返信したりすることができます。</p>
+            <p>ここでは、様々なトピックについての議論や情報交換、雑談などが行われています。</p>
+            <p>新しいスレッドを作成したり、既存のスレッドに投稿したりすることができます。</p>
             <p>興味のあるトピックについて気軽に投稿してください。</p>
             <a href="new_thread/">新規スレッド作成はここ</a>
         </section>
