--- a/tasks/index.html
+++ b/tasks/index.html
@@ -170,7 +170,7 @@
 
     <footer>
         <p>&copy; 2025 talus</p>
-        <p>※このサイトは学校非公認の個人が運営しているサイトです。学校側の問題に責任は取れませんのでご注意<a href="../2equation.html">ください。</a></p>
+        <p>※このサイトは学校非公認の個人が運営しているサイトです。学校側の問題に責任は取れませんのでご注意<a href="../math/2equation/">くだ</a><a href="../math/quadratic/">さい。</a></p>
         <p><a href="https://www.mito1-jh.ibk.ed.jp" target="_blank" rel="noopener noreferrer">茨城県立水戸第一高等学校附属中学校HP</a>
         </p>
     </footer>
