--- a/faq.html
+++ b/faq.html
@@ -57,28 +57,41 @@
                 URLを関係者以外に教えたり、SNSなどで共有したりしないでください。</p>
         </section>
 
+        <h1>ユーザー登録に関して</h1>
+        <section>
+            <h2>Google以外でのログインはできる？</h2>
+            <p>現在のところ、Googleアカウントを使用したログインのみをサポートしています。</p>
+        </section>
+        <section>
+            <h2>ログインできない</h2>
+            <p>以下の点を確認してください。</p>
+            <ul>
+                <li>インターネット接続が安定しているか確認してください。</li>
+                <li>ブラウザのキャッシュとクッキーをクリアしてから再度ログインを試みてください。</li>
+                <li>別のブラウザやデバイスで試してみてください。</li>
+                <li>Googleアカウントが正常に機能しているか確認してください。</li>
+            </ul>
+            <p>それでも問題が解決しない場合は、管理者までご連絡ください。</p>
+        </section>
+        <section>
+            <h2>表示名に他の人の名前を使ってもいいですか？</h2>
+            <p>ダメです。自分のハンドルネーム、もしくは実名を使ってください。</p>
+            <p>他の人の名前を使ってトラブルが起きた場合は、自己責任となりますのでご注意ください。</p>
+            <p style="color: #FE483B;">特に、管理人である"talus"の名前を使ってのなりすましは絶対にやめてください。</p>
+        </section>
+
         <h1>掲示板や質問箱に関して</h1>
         <section>
             <h2>掲示板や質問箱でスパム、誹謗中傷、不適切な内容が投稿されました</h2>
             <p>投稿は定期的に監視していますが、もし見つけた場合は速やかに削除しますので、管理者までご連絡ください。</p>
         </section>
         <section>
-            <h2>掲示板や質問箱で投稿した内容を削除したい</h2>
-            <p>投稿の削除は管理者までご連絡ください。</p>
-        </section>
-        <section>
-            <h2>掲示板や質問箱で投稿した内容を編集したい</h2>
-            <p>投稿の編集は管理者までご連絡ください。</p>
+            <h2>掲示板や質問箱で投稿した内容を編集・削除したい</h2>
+            <p>投稿の編集・削除は管理者までご連絡ください。</p>
         </section>
         <section>
             <h2>掲示板や質問箱で投稿した内容が反映されない</h2>
             <p>投稿が反映されるまでに数分かかることがあります。しばらく待ってからページを再読み込みしてください。</p>
-        </section>
-        <section>
-            <h2>掲示板や質問箱で他の人の名前を使ってもいいですか？</h2>
-            <p>ダメです。自分のハンドルネーム、もしくは実名を使ってください。</p>
-            <p>他の人の名前を使ってトラブルが起きた場合は、自己責任となりますのでご注意ください。</p>
-            <p style="color: #FE483B;">特に、管理人である"talus"の名前を使ってのなりすましは絶対にやめてください。</p>
         </section>
 
         <h1>メニューに関して</h1>
