--- a/mypage/index.html
+++ b/mypage/index.html
@@ -40,8 +40,11 @@
 </head>
 
 <body>
-    <main>
+    <header>
         <h1>マイページ</h1>
+    </header>
+    <main>
+        <a href="../">トップページに戻る</a>
         <section>
             <h2>ユーザー情報</h2>
             <div class="user-info">
@@ -56,8 +59,9 @@
         <section>
             <h2>ユーザー統計</h2>
             <div class="stats">
-                <p>訪問回数: <span id="visit-count">0</span></p>
-                <p>投稿回数: <span id="post-count">0</span></p>
+                <p><i class="fa-solid fa-door-open" title="訪問回数"></i> <span id="visit-count">0</span></p>
+                <p><i class="fa-solid fa-pencil" title="投稿回数"></i> <span id="post-count">0</span></p>
+                <p>(2025年10月22日以降)</p>
             </div>
         </section>
 
