--- a/member_list/index.html
+++ b/member_list/index.html
@@ -54,6 +54,23 @@
     <main>
         <h1>名簿</h1>
         <section>
+            <h2>検索</h2>
+            <label for="search-box">検索：<input type="text" id="search-box" placeholder="名前や番号で検索..."></label>
+            <button id="search-btn">検索</button>
+        </section>
+        <section class="main__student">
+            <h2>生徒</h2>
+            <table>
+                <thead>
+                    <tr>
+                        <th>学籍番号</th>
+                        <th>名前</th>
+                    </tr>
+                </thead>
+                <tbody id="roster"></tbody>
+            </table>
+        </section>
+        <section>
             <h2>先生方</h2>
             <h3>1学年担任</h3>
             <p>主任 綿引利弘</p>
@@ -115,18 +132,6 @@
             <hr>
             <p>(以上敬称略)</p>
         </section>
-        <section class="main__student">
-            <h2>生徒</h2>
-            <table>
-                <thead>
-                    <tr>
-                        <th>学籍番号</th>
-                        <th>名前</th>
-                    </tr>
-                </thead>
-                <tbody id="roster"></tbody>
-            </table>
-        </section>
     </main>
     <footer>
         <p>© 2025 talus</p>
@@ -142,71 +147,81 @@
     <link rel="manifest" href="../manifest.json">
     <script src="../script/verification.js"></script>
     <script data-goatcounter="https://talus.goatcounter.com/count" async src="//gc.zgo.at/count.js"></script>
-    <script>
-        const classes = {
-            "1A": [
-                "相原文広", "赤塚壮介", "麻植雅文", "伊藤龍太", "岩井怜央", "江淵昊輝", "大川晴", "大原京花", "小貫雄平",
-                "小野稜弥", "金澤真帆", "熊倉琉眞", "栗田駿", "小鶴載衡", "後藤笑真", "小橋川明", "小松﨑結子", "紺野真友",
-                "佐々木理帆", "沢田葉", "白濵理子", "杉井知佳子", "鈴木美友", "住川漣", "高橋拓杜", "田中音羽", "田山楓季",
-                "柘植悠那", "永井沙佳", "中西りこ", "中村葵琴", "根本樹", "根本佑香", "野村和花", "早谷直季", "藤芳直生",
-                "峯岸隼吾", "宮本陽菜", "和田稜正", "渡部柚"
-            ],
-            "1B": [
-                "芦分悠夏", "臼井真之介", "江坂颯良斗", "枝川聡汰", "江成暁佑", "太田結仁", "大貫慧里衣", "小幡香菜子",
-                "風間敬太", "梶美咲", "小橋楠々", "佐藤美菜子", "芝間つむぎ", "嶋田こころ", "嶋根沙希", "清水龍太",
-                "鈴木朋花", "住川遼", "曽我あかね", "高柳祐梨奈", "谷越百華", "田村香晴", "德宿はるか", "戸髙創司",
-                "富永光貴", "内藤咲良", "七里春樹", "西中千晃", "西野莉佳子", "橋本健", "濱野敬弘", "平野陽大",
-                "平間琴葉", "深谷澪一朗", "増山幸之介", "峯岸拓吾", "森一眞", "森田彩未", "森野志保", "山崎昇龍"
-            ],
-            "2A": [
-                "相田和", "相田悠乃介", "安藤陸", "飯塚悠仁", "石田晴大", "伊藤希", "岩島綾子", "岩田樹弥",
-                "薄井圭護", "江幡遥人", "小曽納璃佳", "菊池顕広", "木許咲希", "久保田涼斗", "小林史佳",
-                "小林拓海", "坂井敬伍", "篠﨑咲良", "清水玲菜", "志村拓真", "菅田悠暉", "鈴木将弘", "田口翔清",
-                "田村孝太", "塚田旭", "ドカン", "堂田有紗", "戸間替咲希", "野中美遥", "芳賀かえで", "人見桜子",
-                "二川ひなた", "古川陽菜", "星音羽", "松井結愛", "山口陽花", "山下真歩", "山本朱璃", "山本悠二朗",
-                "渡辺太造"
-            ],
-            "2B": [
-                "青山ひかり", "有馬暁都", "飯村和香", "石川陽菜", "石川眞帆", "石原遼門", "市川聡真",
-                "稲田光孝", "井村百花", "岩淵由真", "岩元祥一郎", "小國丈太朗", "河野蒼士", "木津碧咲", "黒澤遼",
-                "小泉裕貴", "小林蒼依", "西城奈那", "佐川慶一郎", "佐々木和義", "清水和奏", "白土咲恵", "杉本桔花",
-                "武田証", "飛田愼也", "直井大和", "中里ゆり奈", "野尻裕貴", "板東すずな", "廣瀬太一", "福田翼",
-                "船尾帆夏", "古川陽菜", "松嶋隼士", "松本悠菜", "森啓惺", "森山心愛", "八木優歌", "安川愛菜", "山田優希"
-            ],
-            "3A": [
-                "浅見太一", "芦田喜一", "有田隼飛", "一家優太", "海野心絆", "大河葉奈歌", "太田和希", "柿原佑真", "木村仁",
-                "黒川大智", "黒澤誠", "小林賢佑", "小松﨑宗汰", "佐々木紳伍", "佐藤航大", "塩谷華奈", "杉本美風",
-                "鈴木朝陽", "鈴木茉莉香", "髙橋希", "巽美陽", "蓼沼歩", "飛田真奈", "中川愛菜", "南指原礼人", "西墻芽咲",
-                "萩原仁子", "羽田琉美香", "百武佳穂", "平石暖馬", "平間太惺", "布施未杜", "古橋宙富", "本田瑛一朗",
-                "前澤実日子", "町井智恵実", "マリーソフィア麗花", "丸茂愛佳", "門間恭汰", "山内尚香"
-            ],
-            "3B": [
-                "安部徳晃", "石﨑遼", "稲川陽太", "上野陽葵", "江﨑園乃", "大内彩愛", "大西昴", "大沼奏太", "小瀬蒼",
-                "金谷一輝", "狐塚結月", "木村菜々子", "熊野御堂樹里", "黒澤礼", "今野心宇", "境菜々香", "佐藤明日香",
-                "塩幡篤杜", "清水千尋", "清水優", "新藤礼菜", "鈴木彩夏", "鈴木波琉", "鈴木隆太", "諏訪美桜利", "添田紗愛",
-                "堤望結", "中川航輝", "中根貴大", "二階堂華", "沼田凜太朗", "野手悠理", "濱田歩乃実", "平根吏人",
-                "藤芳莉子", "本田創甫", "持丸涼穏", "山口史華", "山田歩茉"
-            ]
-        };
+    <script type="module">
+        import { createClient } from "https://esm.sh/@supabase/supabase-js@2";
 
-        const tbody = document.getElementById('roster');
+        const supabase = createClient(
+            "https://mgsbwkidyxmicbacqeeh.supabase.co",
+            "eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6Im1nc2J3a2lkeXhtaWNiYWNxZWVoIiwicm9sZSI6ImFub24iLCJpYXQiOjE3Mzk5NDA0MjIsImV4cCI6MjA1NTUxNjQyMn0.fNkFQykD9ezBirtJM_fOB7XEIlGU1ZFoejCgrYObElg"
+        );
 
-        for (const cls in classes) {
-            classes[cls].forEach((name, index) => {
-                const tr = document.createElement('tr');
-                const tdId = document.createElement('td');
-                const tdName = document.createElement('td');
+        fetch('../names.json')
+            .then(response => response.json())
+            .then(async data => {
+                const rosterBody = document.getElementById('roster');
+                const searchBox = document.getElementById('search-box');
+                const searchBtn = document.getElementById('search-btn');
 
-                // 学籍番号：クラス+出席番号2桁
-                const number = (index + 1).toString().padStart(2, '0');
-                tdId.textContent = `${cls}${number}`;
-                tdName.textContent = name;
+                const { data: { session } } = await supabase.auth.getSession();
 
-                tr.appendChild(tdId);
-                tr.appendChild(tdName);
-                tbody.appendChild(tr);
-            });
-        }
+                if (!session || !session.user) {
+                    showCustomAlert("名簿を見るにはログインが必要です。");
+                    return;
+                }
+
+                let students = [];
+
+                // クラスごとの生徒データを結合
+                for (const className in data) {
+                    const names = data[className];
+                    names.forEach((name, index) => {
+                        students.push({
+                            number: `${className}${String(index + 1).padStart(2, '0')}`,
+                            name: name
+                        });
+                    });
+                }
+
+                // 名簿表示関数
+                function displayRoster(filteredStudents) {
+                    rosterBody.innerHTML = '';
+                    filteredStudents.forEach(student => {
+                        const row = document.createElement('tr');
+                        const numberCell = document.createElement('td');
+                        const nameCell = document.createElement('td');
+
+                        numberCell.textContent = student.number;
+                        nameCell.textContent = student.name;
+
+                        row.appendChild(numberCell);
+                        row.appendChild(nameCell);
+                        rosterBody.appendChild(row);
+                    });
+                }
+
+                // 初期表示
+                displayRoster(students);
+
+                // 検索機能
+                searchBtn.addEventListener('click', () => {
+                    const query = searchBox.value.toLowerCase();
+                    const filteredStudents = students.filter(student =>
+                        student.name.toLowerCase().includes(query) ||
+                        student.number.toLowerCase().includes(query)
+                    );
+                    displayRoster(filteredStudents);
+                });
+            })
+            .catch(error => console.error('Error loading names:', error));
+
+        // Removed duplicate search handler that referenced undefined `tbody`;
+        // search is handled using the roster data inside the fetch callback above.
+
+        document.getElementById("search-box").addEventListener("keypress", (event) => {
+            if (event.key === "Enter") {
+                document.getElementById("search-btn").click();
+            }
+        });
     </script>
 </body>
 
