--- a/math/2equation/index.html
+++ b/math/2equation/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" href="../../img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    <script src="../../script/customAlert.js"></script>
+    <script src="../../script/customAlert.js" type="module"></script>
 </head>
 
 <body>
@@ -65,7 +65,7 @@
     </main>
 
     <script type="module" src="../../notice/notice.js"></script>
-    <script src="../../script/customAlert.js"></script>
+    <script src="../../script/customAlert.js" type="module"></script>
     <script src="../../script/verification.js"></script>
     <script>
         window.MathJax = {
