--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" href="./img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    <script src="./script/customAlert.js"></script>
+    <script src="./script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="manifest.json">
 </head>
@@ -65,8 +65,8 @@
             <h2>お問い合わせ</h2>
             <p><b>よくある質問は<a href="./faq.html">こちら</a>をご覧ください。</b></p>
             <p>
-                「ここデザイン崩れてる！」や「こんな機能追加してほしい！」など要望があれば
-                <a href="https://mail.google.com/mail/?view=cm&to=yamamoto.yuujirou@mito1-h.ibk.ed.jp&su=%E3%82%A6%E3%82%A7%E3%83%96%E3%82%B5%E3%82%A4%E3%83%88%E3%81%AB%E3%81%A4%E3%81%84%E3%81%A6"
+                サイトに関する要望があれば
+                <a href="mailto:yamamoto.yuujirou@mito1-h.ibk.ed.jp?subject=ウェブサイトについての要望&body=要望の内容:%0D%0A%0D%0A不具合の報告の場合は以下の情報もご記入ください。%0D%0A- 使用端末（例: Windows PC, iPad, スマートフォンなど）%0D%0A- 使用ブラウザ（例: Chrome, Safari, Edgeなど）%0D%0A- 発生日時（例: 2025年2月28日 14:30頃）%0D%0A- スクリーンショットなどがあると尚良いです。%0D%0A- 不具合の詳細な説明:"
                     target="_blank" rel="noopener noreferrer">yamamoto.yuujirou@mito1-h.ibk.ed.jp</a>
                 まで
             </p>
@@ -82,7 +82,7 @@
     </footer>
 
     <script type="module" src="./notice/notice.js"></script>
-    <script src="./script/customAlert.js"></script>
+    <script src="./script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="manifest.json">
     <script src="./script/verification.js"></script>
