--- a/math/quadratic/index.html
+++ b/math/quadratic/index.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" href="../../img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    <script src="../../script/customAlert.js"></script>
+    <script src="../../script/customAlert.js" type="module"></script>
     <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <style>
         #graph {
