--- a/new-page.html
+++ b/new-page.html
@@ -34,7 +34,7 @@
     <link rel="icon" type="image/png" href="../img/mitoichi-fuzoku-192x192.png" sizes="192x192">
     <!--CDN-->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.35.4"></script>
-    <script src="../script/customAlert.js"></script>
+    <script src="../script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../manifest.json">
 </head>
@@ -59,7 +59,7 @@
     </footer>
 
 	<script type="module" src="../notice/notice.js"></script>
-    <script src="../script/customAlert.js"></script>
+    <script src="../script/customAlert.js" type="module"></script>
     <!--マニフェスト-->
     <link rel="manifest" href="../manifest.json">
 	<script src="../script/verification.js"></script>
